# mvn-madness

./: .gitignore  MATH.md  README.md  pyproject.toml
experiments/: __init__.py  adversarial_common.py  adversarial_d2_grid_scan.py  adversarial_random_multistart.py  compare_nielsen.py  compare_ps_reduction.py  d2_uniqueness_scan.py  diagnose_adversarial_endpoint.py  hessian_degeneracy_search.py  nielsen_common.py  nielsen_convergence.py  nielsen_vs_horizontal_lift.py  random_endpoint_scan.py  riemannian_gradient_descent_demo.py  shooting_with_diffrax.py  summarize_adversarial_scans.py
experiments/examples/: adversarial_d2_example.csv
src/gaussian_fisher/: __init__.py  _config.py  energy.py  expmap.py  geodesic.py  hilbert_proxy.py  kobayashi.py  linalg.py  nielsen.py  normalize.py  ode.py  ode_checks.py  ps_reduction.py  reference_numpy.py  riemannian_grad.py  solvers.py
tests/: test_d2_uniqueness_scan.py  test_diffrax_shooting.py  test_energy_gradient.py  test_expmap.py  test_geodesic_ode.py  test_geodesic_projection.py  test_hessian_vector.py  test_hilbert_proxy.py  test_horizontal_lift.py  test_identity.py  test_jax_config.py  test_linalg.py  test_nielsen.py  test_normalize.py  test_ps_reduction.py  test_riemannian_grad.py  test_scalar_case.py  test_solvers.py  test_zero_mean_case.py
